--- a/05-stopwatch/index.html
+++ b/05-stopwatch/index.html
@@ -6,18 +6,25 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Stopwatch</title>
-    <link href="https://fonts.googleapis.com/css2?family=Koulen&family=Ubuntu:wght@300;400;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Koulen&family=Ubuntu:wght@300;400;700&display=swap"
+        rel="stylesheet">
     <link rel="stylesheet" href="./main.css">
     <script src="https://kit.fontawesome.com/a7e8fa5308.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
     <div class="wrapper">
-        <p class="info">
-            <i class="fas fa-question"></i>
-        </p>
+        <div class="info">
+            <i class="fas fa-question info-btn"></i>
+            <i class="fa-solid fa-paintbrush colors-btn"></i>
+        </div>
+        <div class="colors">
+            <div class="color one"></div>
+            <div class="color two"></div>
+            <div class="color three"></div>
+        </div>
         <h1>Stopwatch</h1>
-        <p class="stopwatch">0.00</p>
+        <p class="stopwatch">0:00</p>
         <p class="time">0:00</p>
         <div class="buttons">
             <button class="start"><i class="fas fa-play"></i></button>
