--- a/06-notes/index.html
+++ b/06-notes/index.html
@@ -18,7 +18,8 @@
         </div>
     </div>
     <div class="note-area">
-        <div class="note">
+        <!-- Test Note -->
+        <!-- <div class="note">
             <div class="note-header">
                 <h3 class="note-title">Note #1</h3>
                 <button class="delete-note">
@@ -29,12 +30,12 @@
                 Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusamus quod dolorum,
                 blanditiis sit aperiam minus. Recusandae, dignissimos. Vitae, qui itaque.
             </div>
-        </div>
+        </div> -->
     </div>
     <div class="note-panel">
         <h2>Add note</h2>
         <label for="category">Choose category</label>
-        <select id="category">
+        <select id="category" onchange="selectValue()">
             <option value="0" disabled selected>- choose category -</option>
             <option value="1">Home</option>
             <option value="1">Work</option>
